# dependency_solver

./: CMakeLists.txt  README.md  idea.txt
include/: dependency_solver.h  map_vec.h
src/: dependency_solver.cpp  dependency_solver_test.cpp  map_vec_test.cpp
